[gd_scene load_steps=4 format=3 uid="uid://b72r5cu2ik1sv"]

[ext_resource type="Script" path="res://Scripts/Component Scripts/SightComponent.gd" id="1_gt64b"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bp0vo"]
resource_local_to_scene = true
radius = 0.01

[sub_resource type="CircleShape2D" id="CircleShape2D_5b2yr"]
resource_local_to_scene = true
radius = 0.01

[node name="SightComponent" type="Node2D"]
rotation = -1.5708
script = ExtResource("1_gt64b")
vision_cone_angle = 90.0
angle_between_rays = 5.0

[node name="VisionCone" type="Node2D" parent="."]

[node name="CircleSweeper" type="RayCast2D" parent="."]
target_position = Vector2(0, 0)
collision_mask = 3

[node name="OptimiseRaycircle" type="Area2D" parent="."]
collision_layer = 0

[node name="RaycircleShape" type="CollisionShape2D" parent="OptimiseRaycircle"]
shape = SubResource("CircleShape2D_bp0vo")

[node name="AllyRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="DetectorShape" type="CollisionShape2D" parent="AllyRange"]
shape = SubResource("CircleShape2D_5b2yr")

[connection signal="body_entered" from="OptimiseRaycircle" to="." method="_on_optimise_raycircle_body_entered"]
[connection signal="body_exited" from="OptimiseRaycircle" to="." method="_on_optimise_raycircle_body_exited"]
[connection signal="body_entered" from="AllyRange" to="." method="_on_ally_range_body_entered"]
[connection signal="body_exited" from="AllyRange" to="." method="_on_ally_range_body_exited"]
